version 1.0.1
- fix to configure script in re. glib-2.0
- fix missing name of dependent var in gui mpols printout
- remove RTF and LaTeX items from mpols copy options (not yet
  implemented) in gui2
- fix bug in saving gnuplot commands to file
- updates to updater function in gui program (both gui and gui2)
- add rudimentary plugin support for TRAMO and X-12-ARIMA

11/15/02 version 1.0
- change *nix library name to libgretl-1.0
- improve sizing of some windows
- incorporate new translations
- update appearance of gtk-1.2 version of gui
- fix the stats available in connection with a LAD model
- open the champagne (hope this is not premature!)

11/06/02 version 1.0pre4 (for translators)
- fix bug in progress bar when loading large data set
- fix bad "smpl -r" bug in gretlcli
- add Ramsey's RESET test (command "reset")
- improve consistency of editing commands
- more translation fixes
- small LaTeX output fixes
- fix gnuplot PNG output for gnuplot version 3.8
- fix encoding for gnuplot postscript output under NLS
- fix pango encoding issue for gnuplot axis label strings
- fix gnuplot "keyspec" bug 
- add auto-scaling of gui windows if the user has selected a
  large font
- add printing of rho (used in quasi-differencing) to LaTeX
  output for corc and hilu models
- enhanced support for Wooldridge data files
- add "-t" flag to print command: print variables to ten
  significant digits
- improve saving of scalar variables, and documentation of same
- updates to full manual
- make names and labels for monthly and quarterly dummies more
  descriptive

10/10/02 version 1.0pre3
- improve accuracy of calculation of standard errors, and
  numerical accuracy on MS Windows in general
- make gretl databases installable in user directory as well as
  system database directory
- make console output scroll to cursor in gtk2 version
- fix more translation issues
- fix bug in normality chi-square test for large n
- fix bug that prevented CUSUM plot from displaying