@@ -661,6 +661,11 @@ void save_this_graph (GPT_SPEC *plot, const char *fname)
 	return;
     } else {
 	pprintf(prn, "set term %s\n", termstr);
+#ifdef ENABLE_NLS
+	if (strstr(termstr, "postscript")) {
+	    pprintf(prn, "set encoding iso_8859_1\n");
+	}
+#endif	
 	pprintf(prn, "set output '%s'\n", fname);
 	while (fgets(plotline, MAXLEN-1, fq)) {
 	    if (strncmp(plotline, "set term", 8) && 
